# project

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
app/: config.py  database.py  order_logic.py  ui_order_form.py  ui_reports.py  ui_tables.py
data/: categories.csv  clients.csv  deliveries.csv  delivery_statuses.csv  employees.csv  order_items.csv  order_statuses.csv  orders.csv  payment_methods.csv  products.csv  storage_locations.csv  suppliers.csv  supplies.csv  supply_items.csv
db/: mebel.db
docs/: architecture.md  conf.py  domain.md  index.md  specification.md
docs/api/: public-interface.md
docs/diagrams/: context.mmd  order-sequence.mmd  use-cases.mmd
infra/: compose.yaml
scripts/: build-component.ps1  build-component.sh  build-docs.ps1  build-docs.sh  install-component-local.sh  publish-component-testpypi.ps1  publish-component-testpypi.sh
sql/: queries.sql  schema.sql
tests/integration/: test_database.py
tests/smoke/: test_tkinter_smoke.py
tests/unit/: test_core_public_api.py  test_order_logic.py
